--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           DOCKER_USERNAME=dragoncrafted87
           DOCKER_IMAGE=dragoncrafted87/greyhole-database
-          DOCKER_PLATFORMS=linux/amd64,linux/arm64
+          DOCKER_PLATFORMS=linux/amd64
 
           TAGS="--tag ${DOCKER_IMAGE}:edge"
 
